--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <hr>
   <h2>Tentang UMKM Kami</h2>
   <p>UMKM Rasa Lokal adalah usaha keluarga yang memproduksi makanan ringan tradisional khas Indonesia seperti keripik 
-  singkong, dodol mangga, dan kopi bubuk. Kami mengutamakan kualitas, rasa otentik, dan pelayanan yang ramah.
+  singkong, dodol mangga, dan kopi bubuk. Kami mengutamakan kualitas, rasa otentik, dan pelayanan yang ramah.<br>
   <strong>Keunikan kami terletak pada produk 100% homemade dengan bahan alami tanpa pengawet.</strong>
   </p>
 </section>
