--- a/index.html
+++ b/index.html
@@ -2,83 +2,130 @@
 <head>
   <title>Beranda - UMKM Rasa Lokal</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f8f8;
-      color: #333;
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
 
-    header, nav, footer {
-      padding: 20px;
-      margin: 10px auto;
-      max-width: 960px;
-      background-color: #d00202;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-    }
-    
-    section {
-      padding: 20px;
-      margin: 10px auto;
-      max-width: 960px;
-      background-color: #ffffff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f8f8;
+      color: #333;
     }
 
-    header h1 {
-      color: #fefefe;
-      margin-bottom: 5px;
-    }
+  .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background-color: white;
+      flex-wrap: wrap;
+  }
 
-    em {
+  .logo h1 {
+      margin: 0;
+      font-size: 2em;
+      color: #009688;
+  }
+
+  .logo p {
       font-size: 1em;
-      color: #dadada;
-    }
+      color: #666;
+      margin-top: 4px;
+  }
 
-    nav p {
-      text-align: center;
-      font-weight: bold;
-      font-size: 1.1em;
-    }
-
-    nav a {
-      color: #f9f9f9;
+  .navbar a {
       text-decoration: none;
-      margin: 0 10px;
+      background-color: #009688;
+      color: #fff;
+      padding: 10px 18px;
+      margin-left: 10px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+  }
+
+  .navbar a:hover {
+      background-color: #00796b;
+  }
+
+  @media (max-width: 700px) {
+    .header-bar {
+      flex-direction: column;
+      align-items: flex-start;
     }
 
-    nav a:hover {
-      text-decoration: underline;
+    .navbar {
+      margin-top: 15px;
     }
+
+    .navbar a {
+      display: inline-block;
+      margin: 5px 5px 0 0;
+    }
+  }
 
     h2 {
       color: #2c3e50;
       border-bottom: 2px solid #ddd;
-      padding-bottom: 5px;
+      margin-bottom: 15px;
     }
 
-    table {
-      width: 100%;
-      text-align: center;
-      margin-top: 15px;
+    section {
+      padding: 40px;
+      margin: 10px auto;
+      line-height: 1.6;
     }
 
-    td {
+    main {
+      padding: 20px;
+      margin: 10px auto;
+      max-width: 1111px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+      color: #333;
+    }
+
+
+    p, ul, blockquote {
+      margin-top: 10px;
+      line-height: 1.6;
+    }
+
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .product-item {
+      background-color: #fafafa;
       padding: 15px;
-      vertical-align: top;
+      text-align: center;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     }
 
-    img {
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    .product-item img {
+      width: 100%;
+      height: auto;
+      max-height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
+
+    .product-item strong {
+      display: block;
+      margin: 8px 0 4px;
     }
 
     button {
       padding: 10px 20px;
-      background-color: #27ae60;
+      background-color: #009688;
       color: white;
       border: none;
       border-radius: 5px;
@@ -86,7 +133,7 @@
     }
 
     button:hover {
-      background-color: #219150;
+      background-color: #00796b;
     }
 
     blockquote {
@@ -98,11 +145,6 @@
       border-radius: 5px;
     }
 
-    ul {
-      padding-left: 20px;
-      line-height: 1.6;
-    }
-
     article {
       background-color: #fafafa;
       padding: 15px;
@@ -112,51 +154,41 @@
     }
 
     footer {
+      padding: 20px;
+      margin: 10px auto;
+      background-color: #009688;
       text-align: center;
       font-size: 0.9em;
       color: #ffffff;
       border-top: 1px solid #eee;
+
     }
 
     @media (max-width: 600px) {
-      table {
-        display: block;
-      }
-
-      td {
-        display: block;
-        width: 100%;
-      }
-
-      nav p {
+      nav {
         font-size: 1em;
       }
     }
   </style>
 </head>
 <body>
-<center>
 
 <!-- HEADER -->
-<header>
-  <h1>UMKM Rasa Lokal</h1>
-  <p><em>Oleh-oleh khas Nusantara, langsung dari dapur kami ke rumah Anda.</em></p>
+<header class="header-bar">
+  <div class="logo">
+    <h1>UMKM Rasa Lokal</h1>
+    <p><em>Oleh-oleh khas Nusantara, langsung dari dapur kami ke rumah Anda.</em></p>
+  </div>
+  <nav class="navbar">
+    <a href="index.html">Beranda</a>
+    <a href="produk.html">Produk</a>
+    <a href="kontak.html">Kontak</a>
+  </nav>
 </header>
 
-<!-- NAVIGASI -->
-<nav>
-  <p>
-    <a href="index.html">Beranda</a> |
-    <a href="produk.html">Produk</a> |
-    <a href="kontak.html">Kontak</a>
-  </p>
-  <hr>
-</nav>
-</center>
 
-<!-- SECTION 1: TENTANG UMKM -->
+<!-- SECTION 1: TENTANG -->
 <section>
-<hr>
   <h2>Tentang UMKM Kami</h2>
   <p>UMKM Rasa Lokal adalah usaha keluarga yang memproduksi makanan ringan tradisional khas Indonesia seperti keripik 
   singkong, dodol mangga, dan kopi bubuk. Kami mengutamakan kualitas, rasa otentik, dan pelayanan yang ramah.<br>
@@ -165,28 +197,30 @@
 </section>
 
 <!-- SECTION 2: PRODUK UNGGULAN -->
-<section>
+<main>
   <h2>Produk Unggulan</h2>
-  <table>
-    <tr>
-      <td>
-        <img src="keripik.jpg" alt="Keripik Singkong" width="200" height="200"><br>
-        <strong>Keripik Singkong</strong><br>Rp15.000
-      </td>
-      <td>
-        <img src="dodol.jpg" alt="Dodol Mangga" width="200" height="200"><br>
-        <strong>Dodol Mangga</strong><br>Rp20.000
-      </td>
-      <td>
-        <img src="kopi.jpg" alt="Kopi Bubuk" width="200" height="200"><br>
-        <strong>Kopi Bubuk</strong><br>Rp25.000
-      </td>
-    </tr>
-  </table>
-  <p>
+  <div class="product-grid">
+    <div class="product-item">
+      <img src="keripik.jpg" alt="Keripik Singkong">
+      <strong>Keripik Singkong</strong>
+      <p>Rp15.000</p>
+    </div>
+    <div class="product-item">
+      <img src="dodol.jpg" alt="Dodol Mangga">
+      <strong>Dodol Mangga</strong>
+      <p>Rp20.000</p>
+    </div>
+    <div class="product-item">
+      <img src="kopi.jpg" alt="Kopi Bubuk">
+      <strong>Kopi Bubuk</strong>
+      <p>Rp25.000</p>
+    </div>
+  </div>
+  <br>
+  <p style="text-align: center;">
     <a href="produk.html"><button>Lihat Semua Produk</button></a>
   </p>
-</section>
+</main>
 
 <!-- SECTION TESTIMONI -->
 <section>
@@ -222,5 +256,6 @@
 <footer>
   <p>© 2025 UMKM Rasa Lokal. Seluruh hak cipta dilindungi.</p>
 </footer>
+
 </body>
 </html>
