--- a/kontak.html
+++ b/kontak.html
@@ -10,51 +10,72 @@
       padding: 0;
     }
 
-    header, nav, footer {
-      padding: 20px;
-      margin: 10px auto;
-      max-width: 960px;
-      background-color: #d00202;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background-color: white;
+      flex-wrap: wrap;
+  }
+
+  .logo h1 {
+      margin: 0;
+      font-size: 2em;
+      color: #009688;
+  }
+
+  .logo p {
+      font-size: 1em;
+      color: #666;
+      margin-top: 4px;
+  }
+
+  .navbar a {
+      text-decoration: none;
+      background-color: #009688;
+      color: #fff;
+      padding: 10px 18px;
+      margin-left: 10px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+  }
+
+  .navbar a:hover {
+      background-color: #00796b;
+  }
+
+  @media (max-width: 700px) {
+    .header-bar {
+      flex-direction: column;
+      align-items: flex-start;
     }
 
-    section, main {
+    .navbar {
+      margin-top: 15px;
+    }
+
+    .navbar a {
+      display: inline-block;
+      margin: 5px 5px 0 0;
+    }
+  }
+    main {
       padding: 20px;
       margin: 10px auto;
-      max-width: 960px;
+      max-width: 1111px;
       background-color: #fff;
       border-radius: 8px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
       color: #333;
     }
 
-     header h1 {
-      color: #fefefe;
-      margin-bottom: 5px;
+    section{
+      padding: 30px;
+      margin: 10px auto;
+      background-color: #fff;
     }
-
-    em {
-      font-size: 1em;
-      color: #dadada;
-    }
-
-    nav p {
-      text-align: center;
-      font-weight: bold;
-      font-size: 1.1em;
-    }
-
-    nav a {
-      color: #f9f9f9;
-      text-decoration: none;
-      margin: 0 10px;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
 
     h2 {
       color: #2c3e50;
@@ -84,7 +105,7 @@
     input[type="submit"] {
       width: 150px;
       padding: 12px 20px;
-      background-color: #27ae60;
+      background-color: #009688;
       color: white;
       border: none;
       border-radius: 6px;
@@ -139,6 +160,9 @@
     }
 
     footer {
+      padding: 20px;
+      margin: 10px auto;
+      background-color: #009688;
       text-align: center;
       font-size: 0.9em;
       color: #ffffff;
@@ -148,24 +172,17 @@
   </style>
 </head>
 <body>
-<center>
-
-<!-- HEADER -->
-<header>
-  <h1>UMKM Rasa Lokal</h1>
-  <p><em>Oleh-oleh khas Nusantara, langsung dari dapur kami ke rumah Anda.</em></p>
-</header>
-
-<!-- NAVIGASI -->
-<nav>
-  <p>
-    <a href="index.html">Beranda</a> |
-    <a href="produk.html">Produk</a> |
+<header class="header-bar">
+  <div class="logo">
+    <h1>UMKM Rasa Lokal</h1>
+    <p><em>Oleh-oleh khas Nusantara, langsung dari dapur kami ke rumah Anda.</em></p>
+  </div>
+  <nav class="navbar">
+    <a href="index.html">Beranda</a>
+    <a href="produk.html">Produk</a>
     <a href="kontak.html">Kontak</a>
-  </p>
-  <hr>
-</nav>
-</center>
+  </nav>
+</header>
 
 <main>
   <h2>Hubungi Kami</h2>
@@ -186,7 +203,7 @@
     
     <input type="submit" value="Kirim">
   </form>
-
+</main>
   <section>
     <h2>Informasi Kontak</h2>
     <address>
@@ -235,7 +252,6 @@
       <a href="https://instagram.com/umkmrasalokal" target="_blank" rel="noopener noreferrer">Instagram</a>
     </div>
   </section>
-</main>
 
 <footer>
   <p>© 2025 UMKM Rasa Lokal. Seluruh hak cipta dilindungi.</p>
