--- a/index.html
+++ b/index.html
@@ -1,310 +1,171 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beranda - UMKM Rasa Lokal</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>UMKM Rasa Lokal - Produk</title>
+<style>
+  * {
+    box-sizing: border-box;
+    margin: 0; padding: 0;
+  }
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #f8f8f8;
+    color: #333;
+  }
 
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f8f8;
-      color: #333;
-    }
+  main {
+    max-width: 1111px;
+    margin: 20px auto;
+    padding: 20px;
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  }
 
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      background-color: white;
-      flex-wrap: wrap;
-    }
+  h2 {
+    color: #2c3e50;
+    border-bottom: 2px solid #ddd;
+    margin-bottom: 15px;
+  }
 
-    .logo h1 {
-      margin: 0;
-      font-size: 2em;
-      color: #009688;
-    }
+  /* Desktop Grid */
+  .product-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
 
-    .logo p {
-      font-size: 1em;
-      color: #666;
-      margin-top: 4px;
-    }
+  .product-item {
+    background: #fafafa;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    padding: 15px;
+    text-align: center;
+    transition: transform 0.3s ease;
+  }
 
-    .navbar a {
-      text-decoration: none;
-      background-color: #009688;
-      color: #fff;
-      padding: 10px 18px;
-      margin-left: 10px;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
+  .product-item img {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 10px;
+  }
 
-    .navbar a:hover {
-      background-color: #00796b;
-    }
+  .product-item strong {
+    display: block;
+    margin: 8px 0 4px;
+  }
 
-    h2 {
-      color: #2c3e50;
-      border-bottom: 2px solid #ddd;
-      margin-bottom: 15px;
-    }
-
-    section {
-      padding: 40px;
-      margin: 10px auto;
-      line-height: 1.6;
-    }
-
-    main {
-      padding: 20px;
-      margin: 10px auto;
-      max-width: 1111px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-      color: #333;
-    }
-
-    p, ul, blockquote {
-      margin-top: 10px;
-      line-height: 1.6;
-    }
-
+  /* Mobile carousel container */
+  @media (max-width: 768px) {
     .product-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
+      display: block; /* non-grid */
+      position: relative;
+      overflow: hidden;
+      height: 280px; /* fixed height for consistent view */
     }
 
     .product-item {
-      background-color: #fafafa;
-      padding: 15px;
-      text-align: center;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      position: absolute;
+      width: 90%;
+      left: 50%;
+      top: 10px;
+      transform: translateX(-50%);
+      opacity: 0;
+      transition: opacity 0.5s ease;
+      pointer-events: none;
     }
 
-    .product-item img {
-      width: 100%;
-      height: auto;
-      max-height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 10px;
+    .product-item.active {
+      opacity: 1;
+      pointer-events: auto;
+      position: relative;
+      margin: 0 auto;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      background: #fff;
     }
+  }
 
-    .product-item strong {
-      display: block;
-      margin: 8px 0 4px;
-    }
+  button {
+    padding: 10px 20px;
+    background-color: #009688;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
 
-    button {
-      padding: 10px 20px;
-      background-color: #009688;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #00796b;
-    }
-
-    blockquote {
-      background-color: #f0f0f0;
-      font-style: italic;
-      padding: 15px;
-      border-left: 5px solid #3498db;
-      margin: 15px 0;
-      border-radius: 5px;
-    }
-
-    article {
-      background-color: #fafafa;
-      padding: 15px;
-      border-left: 4px solid #e67e22;
-      margin-top: 10px;
-      border-radius: 5px;
-    }
-
-    footer {
-      padding: 20px;
-      margin: 10px auto;
-      background-color: #009688;
-      text-align: center;
-      font-size: 0.9em;
-      color: #ffffff;
-      border-top: 1px solid #eee;
-    }
-
-    /* RESPONSIVE */
-    @media (max-width: 768px) {
-      body {
-        font-size: 16px;
-      }
-
-      section,
-      main {
-        padding: 20px;
-        margin: 10px;
-      }
-
-      .header-bar {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 20px;
-      }
-
-      .logo h1 {
-        font-size: 1.5em;
-      }
-
-      .logo p {
-        font-size: 0.95em;
-      }
-
-      .navbar {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        margin-top: 10px;
-      }
-
-      .navbar a {
-        padding: 8px 14px;
-        font-size: 0.95em;
-      }
-
-      h2 {
-        font-size: 1.2em;
-      }
-
-      .product-grid {
-        display: flex;
-        overflow-x: auto;
-        scroll-snap-type: x mandatory;
-        -webkit-overflow-scrolling: touch;
-        gap: 15px;
-        padding-bottom: 10px;
-      }
-
-      .product-item {
-        flex: 0 0 85%;
-        scroll-snap-align: center;
-        margin-right: 10px;
-      }
-
-      .product-item img {
-        max-height: 160px;
-      }
-
-      button {
-        width: 100%;
-      }
-
-      footer {
-        font-size: 0.85em;
-        padding: 15px;
-      }
-    }
-  </style>
+  button:hover {
+    background-color: #00796b;
+  }
+</style>
 </head>
 <body>
 
-<!-- HEADER -->
-<header class="header-bar">
-  <div class="logo">
-    <h1>UMKM Rasa Lokal</h1>
-    <p><em>Oleh-oleh khas Nusantara, langsung dari dapur kami ke rumah Anda.</em></p>
-  </div>
-  <nav class="navbar">
-    <a href="index.html">Beranda</a>
-    <a href="produk.html">Produk</a>
-    <a href="kontak.html">Kontak</a>
-  </nav>
-</header>
-
-<!-- SECTION 1: TENTANG -->
-<section>
-  <h2>Tentang UMKM Kami</h2>
-  <p>UMKM Rasa Lokal adalah usaha keluarga yang memproduksi makanan ringan tradisional khas Indonesia seperti keripik 
-  singkong, dodol mangga, dan kopi bubuk. Kami mengutamakan kualitas, rasa otentik, dan pelayanan yang ramah.<br>
-  <strong>Keunikan kami terletak pada produk 100% homemade dengan bahan alami tanpa pengawet.</strong>
-  </p>
-</section>
-
-<!-- SECTION 2: PRODUK UNGGULAN -->
 <main>
   <h2>Produk Unggulan</h2>
-  <div class="product-grid">
-    <div class="product-item">
-      <img src="keripik.jpg" alt="Keripik Singkong">
+  <div class="product-grid" id="productGrid">
+    <div class="product-item active">
+      <img src="keripik.jpg" alt="Keripik Singkong" />
       <strong>Keripik Singkong</strong>
       <p>Rp15.000</p>
     </div>
     <div class="product-item">
-      <img src="dodol.jpg" alt="Dodol Mangga">
+      <img src="dodol.jpg" alt="Dodol Mangga" />
       <strong>Dodol Mangga</strong>
       <p>Rp20.000</p>
     </div>
     <div class="product-item">
-      <img src="kopi.jpg" alt="Kopi Bubuk">
+      <img src="kopi.jpg" alt="Kopi Bubuk" />
       <strong>Kopi Bubuk</strong>
       <p>Rp25.000</p>
     </div>
   </div>
-  <br>
-  <p style="text-align: center;">
+  <p style="text-align:center; margin-top:20px;">
     <a href="produk.html"><button>Lihat Semua Produk</button></a>
   </p>
 </main>
 
-<!-- SECTION TESTIMONI -->
-<section>
-  <h2>Testimoni Pelanggan</h2>
-  <blockquote>
-    “Rasa dan kualitas produknya luar biasa! Saya suka sekali dodol mangganya, manis dan legit. Pelayanannya juga sangat ramah.”<br>
-    - Rina, Jakarta
-  </blockquote>
-</section>
+<script>
+  // Carousel otomatis untuk layar kecil (max-width: 768px)
+  (function(){
+    const items = document.querySelectorAll('.product-item');
+    let currentIndex = 0;
+    const total = items.length;
 
-<!-- SECTION KEUNGGULAN -->
-<section>
-  <h2>Keunggulan UMKM Kami</h2>
-  <ul>
-    <li>Bahan 100% alami tanpa pengawet</li>
-    <li>Rasa otentik khas Indonesia</li>
-    <li>Dibuat secara homemade</li>
-    <li>Harga terjangkau</li>
-    <li>Kemasan menarik dan higienis</li>
-  </ul>
-</section>
+    function showSlide(index) {
+      items.forEach((item, i) => {
+        item.classList.toggle('active', i === index);
+      });
+    }
 
-<!-- SECTION BERITA -->
-<section>
-  <h2>Berita Terbaru</h2>
-  <article>
-    <h3>UMKM Rasa Lokal Tampil di Pameran Produk Nusantara 2025</h3>
-    <p>Pada bulan Mei 2025, UMKM Rasa Lokal berkesempatan untuk ikut serta dalam Pameran Produk Nusantara yang diadakan di Jakarta Convention Center. Produk kami mendapat sambutan hangat dari pengunjung lokal maupun internasional.</p>
-  </article>
-</section>
+    function nextSlide() {
+      currentIndex = (currentIndex + 1) % total;
+      showSlide(currentIndex);
+    }
 
-<!-- FOOTER -->
-<footer>
-  <p>© 2025 UMKM Rasa Lokal. Seluruh hak cipta dilindungi.</p>
-</footer>
+    // Jalankan hanya jika layar kecil
+    function checkScreen() {
+      if(window.innerWidth <= 768) {
+        intervalId = setInterval(nextSlide, 3000);
+      } else {
+        clearInterval(intervalId);
+        // Reset ke semua aktif (tampilan grid)
+        items.forEach(item => item.classList.add('active'));
+      }
+    }
+
+    let intervalId = null;
+    checkScreen();
+
+    window.addEventListener('resize', () => {
+      checkScreen();
+    });
+  })();
+</script>
 
 </body>
 </html>
