--- a/index.html
+++ b/index.html
@@ -1,113 +1,239 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>UMKM Rasa Lokal - Produk</title>
-<style>
-  * {
-    box-sizing: border-box;
-    margin: 0; padding: 0;
-  }
-  body {
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #f8f8f8;
-    color: #333;
-  }
+  <meta charset="UTF-8" />
+  <title>Beranda - UMKM Rasa Lokal</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-  main {
-    max-width: 1111px;
-    margin: 20px auto;
-    padding: 20px;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-  }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f8f8;
+      color: #333;
+    }
 
-  h2 {
-    color: #2c3e50;
-    border-bottom: 2px solid #ddd;
-    margin-bottom: 15px;
-  }
+    .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background-color: white;
+      flex-wrap: wrap;
+    }
 
-  /* Desktop Grid */
-  .product-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-  }
+    .logo h1 {
+      margin: 0;
+      font-size: 2em;
+      color: #009688;
+    }
 
-  .product-item {
-    background: #fafafa;
-    border-radius: 10px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-    padding: 15px;
-    text-align: center;
-    transition: transform 0.3s ease;
-  }
+    .logo p {
+      font-size: 1em;
+      color: #666;
+      margin-top: 4px;
+    }
 
-  .product-item img {
-    width: 100%;
-    max-height: 200px;
-    object-fit: cover;
-    border-radius: 8px;
-    margin-bottom: 10px;
-  }
+    .navbar a {
+      text-decoration: none;
+      background-color: #009688;
+      color: #fff;
+      padding: 10px 18px;
+      margin-left: 10px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
 
-  .product-item strong {
-    display: block;
-    margin: 8px 0 4px;
-  }
+    .navbar a:hover {
+      background-color: #00796b;
+    }
 
-  /* Mobile carousel container */
-  @media (max-width: 768px) {
+    @media (max-width: 700px) {
+      .header-bar {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .navbar {
+        margin-top: 15px;
+      }
+
+      .navbar a {
+        display: inline-block;
+        margin: 5px 5px 0 0;
+      }
+    }
+
+    h2 {
+      color: #2c3e50;
+      border-bottom: 2px solid #ddd;
+      margin-bottom: 15px;
+    }
+
+    section {
+      padding: 40px;
+      margin: 10px auto;
+      line-height: 1.6;
+    }
+
+    main {
+      padding: 20px;
+      margin: 10px auto;
+      max-width: 1111px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+      color: #333;
+    }
+
+    p, ul, blockquote {
+      margin-top: 10px;
+      line-height: 1.6;
+    }
+
     .product-grid {
-      display: block; /* non-grid */
-      position: relative;
-      overflow: hidden;
-      height: 280px; /* fixed height for consistent view */
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
     }
 
     .product-item {
-      position: absolute;
-      width: 90%;
-      left: 50%;
-      top: 10px;
-      transform: translateX(-50%);
-      opacity: 0;
-      transition: opacity 0.5s ease;
-      pointer-events: none;
+      background-color: #fafafa;
+      padding: 15px;
+      text-align: center;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      transition: box-shadow 0.3s ease;
     }
 
-    .product-item.active {
-      opacity: 1;
-      pointer-events: auto;
-      position: relative;
-      margin: 0 auto;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      background: #fff;
+    .product-item img {
+      width: 100%;
+      height: auto;
+      max-height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 10px;
     }
-  }
 
-  button {
-    padding: 10px 20px;
-    background-color: #009688;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+    .product-item strong {
+      display: block;
+      margin: 8px 0 4px;
+    }
 
-  button:hover {
-    background-color: #00796b;
-  }
-</style>
+    button {
+      padding: 10px 20px;
+      background-color: #009688;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #00796b;
+    }
+
+    blockquote {
+      background-color: #f0f0f0;
+      font-style: italic;
+      padding: 15px;
+      border-left: 5px solid #3498db;
+      margin: 15px 0;
+      border-radius: 5px;
+    }
+
+    article {
+      background-color: #fafafa;
+      padding: 15px;
+      border-left: 4px solid #e67e22;
+      margin-top: 10px;
+      border-radius: 5px;
+    }
+
+    footer {
+      padding: 20px;
+      margin: 10px auto;
+      background-color: #009688;
+      text-align: center;
+      font-size: 0.9em;
+      color: #ffffff;
+      border-top: 1px solid #eee;
+    }
+
+    @media (max-width: 768px) {
+      /* Carousel style for mobile */
+
+      .product-grid {
+        position: relative;
+        display: block;
+        height: auto;
+        padding-bottom: 40px; /* ruang bawah untuk teks */
+        overflow: visible;
+        max-width: 320px;
+        margin: 20px auto;
+      }
+
+      .product-item {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 90%;
+        transform: translateX(-50%);
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.5s ease;
+        box-shadow: none;
+        background-color: transparent;
+        padding-bottom: 50px;
+        min-height: 280px;
+        border-radius: 10px;
+      }
+
+      .product-item.active {
+        opacity: 1;
+        pointer-events: auto;
+        position: relative;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+        background-color: #fafafa;
+        padding-bottom: 20px;
+        min-height: auto;
+      }
+    }
+  </style>
 </head>
 <body>
 
+<!-- HEADER -->
+<header class="header-bar">
+  <div class="logo">
+    <h1>UMKM Rasa Lokal</h1>
+    <p><em>Oleh-oleh khas Nusantara, langsung dari dapur kami ke rumah Anda.</em></p>
+  </div>
+  <nav class="navbar">
+    <a href="index.html">Beranda</a>
+    <a href="produk.html">Produk</a>
+    <a href="kontak.html">Kontak</a>
+  </nav>
+</header>
+
+<!-- SECTION 1: TENTANG -->
+<section>
+  <h2>Tentang UMKM Kami</h2>
+  <p>UMKM Rasa Lokal adalah usaha keluarga yang memproduksi makanan ringan tradisional khas Indonesia seperti keripik 
+  singkong, dodol mangga, dan kopi bubuk. Kami mengutamakan kualitas, rasa otentik, dan pelayanan yang ramah.<br>
+  <strong>Keunikan kami terletak pada produk 100% homemade dengan bahan alami tanpa pengawet.</strong>
+  </p>
+</section>
+
+<!-- SECTION 2: PRODUK UNGGULAN -->
 <main>
   <h2>Produk Unggulan</h2>
-  <div class="product-grid" id="productGrid">
+  <div class="product-grid">
     <div class="product-item active">
       <img src="keripik.jpg" alt="Keripik Singkong" />
       <strong>Keripik Singkong</strong>
@@ -124,20 +250,56 @@
       <p>Rp25.000</p>
     </div>
   </div>
-  <p style="text-align:center; margin-top:20px;">
+  <br />
+  <p style="text-align: center;">
     <a href="produk.html"><button>Lihat Semua Produk</button></a>
   </p>
 </main>
 
+<!-- SECTION TESTIMONI -->
+<section>
+  <h2>Testimoni Pelanggan</h2>
+  <blockquote>
+    “Rasa dan kualitas produknya luar biasa! Saya suka sekali dodol mangganya, manis dan legit. Pelayanannya juga sangat ramah.”<br>
+    - Rina, Jakarta
+  </blockquote>
+</section>
+
+<!-- SECTION KEUNGGULAN -->
+<section>
+  <h2>Keunggulan UMKM Kami</h2>
+  <ul>
+    <li>Bahan 100% alami tanpa pengawet</li>
+    <li>Rasa otentik khas Indonesia</li>
+    <li>Dibuat secara homemade</li>
+    <li>Harga terjangkau</li>
+    <li>Kemasan menarik dan higienis</li>
+  </ul>
+</section>
+
+<!-- SECTION BERITA -->
+<section>
+  <h2>Berita Terbaru</h2>
+  <article>
+    <h3>UMKM Rasa Lokal Tampil di Pameran Produk Nusantara 2025</h3>
+    <p>Pada bulan Mei 2025, UMKM Rasa Lokal berkesempatan untuk ikut serta dalam Pameran Produk Nusantara yang diadakan di Jakarta Convention Center. Produk kami mendapat sambutan hangat dari pengunjung lokal maupun internasional.</p>
+  </article>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  <p>© 2025 UMKM Rasa Lokal. Seluruh hak cipta dilindungi.</p>
+</footer>
+
 <script>
-  // Carousel otomatis untuk layar kecil (max-width: 768px)
-  (function(){
-    const items = document.querySelectorAll('.product-item');
+  // Carousel untuk mobile (max-width: 768px)
+  function initCarousel() {
+    const productItems = document.querySelectorAll('.product-item');
     let currentIndex = 0;
-    const total = items.length;
+    const total = productItems.length;
 
     function showSlide(index) {
-      items.forEach((item, i) => {
+      productItems.forEach((item, i) => {
         item.classList.toggle('active', i === index);
       });
     }
@@ -147,24 +309,18 @@
       showSlide(currentIndex);
     }
 
-    // Jalankan hanya jika layar kecil
-    function checkScreen() {
+    showSlide(currentIndex);
+    setInterval(() => {
       if(window.innerWidth <= 768) {
-        intervalId = setInterval(nextSlide, 3000);
-      } else {
-        clearInterval(intervalId);
-        // Reset ke semua aktif (tampilan grid)
-        items.forEach(item => item.classList.add('active'));
+        nextSlide();
       }
-    }
+    }, 3000);
+  }
 
-    let intervalId = null;
-    checkScreen();
-
-    window.addEventListener('resize', () => {
-      checkScreen();
-    });
-  })();
+  window.addEventListener('load', initCarousel);
+  window.addEventListener('resize', () => {
+    // Reset carousel when resize if needed
+  });
 </script>
 
 </body>
