--- a/index.html
+++ b/index.html
@@ -200,16 +200,21 @@
     font-size: 0.9em;
   }
 
+ @media (max-width: 480px) {
+  /* ... style lain ... */
+
   .navbar a {
-    padding: 8px 12px;
-    font-size: 0.9em;
-    margin-left: 5px;
+    padding: 14px 16px;
+    font-size: 1.2em;
+    margin-left: 0;
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 12px;
     width: 100%;
     box-sizing: border-box;
-    border-radius: 6px;
+    border-radius: 8px;
+    text-align: center;
   }
+
 
   .product-grid {
     grid-template-columns: 1fr;
