--- a/index.html
+++ b/index.html
@@ -188,32 +188,43 @@
     font-size: 1.2em;
   }
 
+  @media (max-width: 480px) {
   .header-bar {
-    padding: 15px 20px;
+    padding: 25px 20px;     /* tambah padding atas bawah */
+    flex-direction: column;
+    align-items: center;
+    min-height: 100px;      /* beri tinggi minimal supaya header cukup besar */
   }
 
   .logo h1 {
-    font-size: 1.5em;
+    font-size: 2em;         /* besar banget */
+    margin-bottom: 8px;
+    text-align: center;
   }
 
   .logo p {
-    font-size: 0.9em;
+    font-size: 1.1em;
+    text-align: center;
+    margin-bottom: 15px;
   }
 
- @media (max-width: 480px) {
-  /* ... style lain ... */
+  .navbar {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
   .navbar a {
-    padding: 14px 16px;
-    font-size: 1.2em;
-    margin-left: 0;
-    display: block;
-    margin-bottom: 12px;
-    width: 100%;
-    box-sizing: border-box;
-    border-radius: 8px;
+    padding: 16px 20px;
+    font-size: 1.3em;
+    margin: 6px 0;
+    width: 90%;
+    max-width: 350px;
+    border-radius: 10px;
     text-align: center;
   }
+}
 
 
   .product-grid {
