--- a/index.html
+++ b/index.html
@@ -17,46 +17,45 @@
       color: #333;
     }
 
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      background-color: white;
-      flex-wrap: wrap;
-    }
+.header-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 40px;
+  background-color: white;
+  flex-wrap: wrap;
+}
 
-    .logo h1 {
-      margin: 0;
-      font-size: 2em;
-      color: #009688;
-    }
+.logo h1 {
+  font-size: 2.5em;
+  color: #009688;
+}
 
-    .logo p {
-      font-size: 1em;
-      color: #666;
-      margin-top: 4px;
-    }
+.logo p {
+  font-size: 1.1em;
+  color: #666;
+  margin-top: 5px;
+}
 
-    .navbar {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
+.navbar {
+  display: flex;
+  gap: 12px;
+}
 
-    .navbar a {
-      text-decoration: none;
-      background-color: #009688;
-      color: #fff;
-      padding: 10px 18px;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
+.navbar a {
+  text-decoration: none;
+  background-color: #009688;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 1.1em;
+  border-radius: 6px;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
 
-    .navbar a:hover {
-      background-color: #00796b;
-    }
+.navbar a:hover {
+  background-color: #00796b;
+}
 
     h2 {
       color: #2c3e50;
@@ -156,38 +155,30 @@
 
     /* ======== RESPONSIVE DESIGN ======== */
     @media (max-width: 700px) {
-      .header-bar {
-        flex-direction: column;
-        align-items: center;
-        padding: 25px 20px;
-      }
+     @media (max-width: 768px) {
+  .header-bar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
+  }
 
-      .logo h1 {
-        font-size: 2.2em;
-        text-align: center;
-      }
+  .logo {
+    margin-bottom: 15px;
+  }
 
-      .logo p {
-        font-size: 1.2em;
-        text-align: center;
-        margin-bottom: 15px;
-      }
+  .navbar {
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+  }
 
-      .navbar {
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-      }
-
-      .navbar a {
-        font-size: 1.3em;
-        padding: 14px 20px;
-        width: 90%;
-        max-width: 350px;
-        text-align: center;
-        margin-bottom: 10px;
-        border-radius: 10px;
-      }
+  .navbar a {
+    width: 100%;
+    text-align: center;
+    font-size: 1.3em;
+    padding: 12px 0;
+  }
+}
 
       section, main {
         padding: 20px;
