--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     /* ======== RESPONSIVE DESIGN ======== */
     @media (max-width: 700px) {
-     @media (max-width: 768px) {
+ @media (max-width: 768px) {
   .header-bar {
     flex-direction: column;
     align-items: flex-start;
@@ -167,18 +167,17 @@
   }
 
   .navbar {
-    flex-direction: column;
-    width: 100%;
+    flex-direction: row; /* tetap horizontal */
+    flex-wrap: wrap;     /* boleh turun ke bawah jika sempit */
     gap: 10px;
   }
 
   .navbar a {
-    width: 100%;
-    text-align: center;
-    font-size: 1.3em;
-    padding: 12px 0;
+    font-size: 1.2em;
+    padding: 10px 18px;
   }
 }
+
 
       section, main {
         padding: 20px;
