--- a/kontak.html
+++ b/kontak.html
@@ -157,26 +157,26 @@
 
     /* Responsive for mobile */
 @media (max-width: 600px) {
-  body {
-    font-size: 14px;
-  }
 
-  .header-bar {
-    padding: 15px 20px;
-  }
 
-  .logo h1 {
-    font-size: 1.5em;
-  }
+      .header-bar {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+      }
 
-  .logo p {
-    font-size: 1em;
-  }
+      .navbar {
+        margin-top: 15px;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+      }
 
-  .navbar a {
-    padding: 8px 14px;
-    font-size: 1em;
-  }
+      .navbar a {
+        margin-left: 0;
+        padding: 12px 20px;
+        font-size: 1em;
+      }
 
   main, section {
     padding: 15px;
