--- a/kontak.html
+++ b/kontak.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1.2, maximum-scale=1.5">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kontak - UMKM Rasa Lokal</title>
   <style>
     body {
