--- a/kontak.html
+++ b/kontak.html
@@ -242,7 +242,7 @@
     <input type="email" id="email" name="email" required><br>
     
     <label for="telepon">No. Telepon (opsional):</label><br>
-    <input type="text" id="telepon" name="telepon"><br>
+    <input type="tel" id="telepon" name="telepon"><br>
     
     <label for="pesan">Pesan:</label><br>
     <textarea id="pesan" name="pesan" rows="5" cols="40" required></textarea><br>
