--- a/kontak.html
+++ b/kontak.html
@@ -293,9 +293,9 @@
 <section>
   <h2>Media Sosial</h2>
   <div class="social-links">
-    <a href="https://www.facebook.com/umkmrasalokal" target="_blank" rel="noopener noreferrer">Facebook</a>
-    <a href="https://twitter.com/umkmrasalokal" target="_blank" rel="noopener noreferrer">Twitter</a>
-    <a href="https://instagram.com/umkmrasalokal" target="_blank" rel="noopener noreferrer">Instagram</a>
+    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">Facebook</a>
+    <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">Twitter</a>
+    <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a>
   </div>
 </section>
 
