--- a/index.html
+++ b/index.html
@@ -234,7 +234,11 @@
   <h2>Testimoni Pelanggan</h2>
   <blockquote>
     “Rasa dan kualitas produknya luar biasa! Saya suka sekali dodol mangganya, manis dan legit. Pelayanannya juga sangat ramah.”<br>
-    - Rina, Jakarta
+    - Rina, Jakarta<br>
+    “Rasa dodol mangganya benar-benar bikin nostalgia masa kecil! Enak dan manisnya lembuuttt.”<br>
+    - Sari, Bandung<br>
+    “Keripiknya renyah dan pas banget buat cemilan sore. Sudah langganan 6 bulan”<br>
+    - Lia, Semarang
   </blockquote>
 </section>
 
