--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
       line-height: 1.6;
     }
 
+    h2.{
+      color:  #009688;
+    }
+    
     main {
       padding: 20px;
       margin: 10px auto;
@@ -133,6 +137,16 @@
       border-radius: 5px;
     }
 
+        ul {
+      background-color: #fafafa;
+      padding: 15px;
+      border-left: 4px solid #009688;
+      margin-top: 10px;
+      margin: 15px 0;
+      border-radius: 5px;
+      padding-left: 40px;
+    }
+
     footer {
       padding: 20px;
       margin: 10px auto;
@@ -166,13 +180,12 @@
       }
 
           footer {
-        padding: 20px;
-        margin: 10px auto;
-        background-color: #009688;
-        text-align: center;
-        font-size: 0.9em;
-        color: #ffffff;
-        border-top: 1px solid #eee;
+      padding: 20px;
+      margin: 10px auto;
+      text-align: center;
+      font-size: 0.9em;
+      color: #009688;
+      border-top: 1px solid #eee;
       }
 
   }
