--- a/produk.html
+++ b/produk.html
@@ -163,10 +163,9 @@
       footer {
       padding: 20px;
       margin: 10px auto;
-      background-color: #009688;
       text-align: center;
       font-size: 0.9em;
-      color: #ffffff;
+      color: #009688;
       border-top: 1px solid #eee;
       }
     }
@@ -174,10 +173,9 @@
     footer {
       padding: 20px;
       margin: 10px auto;
-      background-color: #009688;
       text-align: center;
       font-size: 0.9em;
-      color: #ffffff;
+      color: #009688;
       border-top: 1px solid #eee;
     }
   </style>
