--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     }
 
     h2.{
-      color:  #009688;
+      color: #009688;
+      border-bottom: 2px solid #ddd;
+      margin-bottom: 15px;
     }
     
     main {
@@ -129,15 +131,7 @@
       border-radius: 5px;
     }
 
-    article {
-      background-color: #fafafa;
-      padding: 15px;
-      border-left: 4px solid #e67e22;
-      margin-top: 10px;
-      border-radius: 5px;
-    }
-
-        ul {
+    ul {
       background-color: #fafafa;
       padding: 15px;
       border-left: 4px solid #009688;
@@ -145,6 +139,14 @@
       margin: 15px 0;
       border-radius: 5px;
       padding-left: 40px;
+    }
+    
+    article {
+      background-color: #fafafa;
+      padding: 15px;
+      border-left: 4px solid #e67e22;
+      margin-top: 10px;
+      border-radius: 5px;
     }
 
     footer {
